applications/infrastructure/apps/forgejo/forgejo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: forgejo-service
  namespace: forgejo
spec:
  type: ClusterIP
  selector:
    app: forgejo
  ports:
    - name: http
      port: 3000
      targetPort: 3000
    - name: ssh
      port: 22
      targetPort: 22
